[package]
name = "rogue"
version = "0.1.0"
authors = ["Jeff Zhang <zhang.jeffreyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
specs = { version = "0.16.1" }
specs-derive = "0.4.1"